# desafio7-tinyml

./: CMakeLists.txt  CMakeLists.txt.txt  diagram.json  diagram.json.txt  main.cpp  main.cpp.txt  wokwi.toml  wokwi.toml.txt
model-parameters/: model_metadata.h  model_variables.h
tflite-model/: tflite_learn_962031_4_compiled.cpp  tflite_learn_962031_4_compiled.h
